# PorkChop

./: .gitignore  BLOG-POST.md  CLAUDE.md  HOW-IT-WORKS.md  PDR.md  README.md  pyproject.toml
src/porkchop/: __init__.py  analyzer.py  api.py  chunker.py  cleaner.py  cli.py  comparator.py  database.py  extractor.py  ingestion.py  scorer.py
src/porkchop/web/: app.py
src/porkchop/web/static/: style.css
src/porkchop/web/templates/: base.html  bill.html  compare.html  index.html  search.html  spending.html
tests/: conftest.py  test_chunker.py  test_cleaner.py  test_comparator.py  test_database.py  test_extractor.py  test_ingestion.py  test_scorer.py  test_web.py
web/: package-lock.json  package.json
web/mcp/: package-lock.json  package.json
web/mcp/src/: db.ts  index.ts
web/src/app/: globals.css  layout.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/bills/: page.tsx
web/src/app/(app)/bills/[id]/: BillChatWrapper.tsx  page.tsx
web/src/app/(app)/dashboard/: page.tsx
web/src/app/(app)/process/: ProcessForm.tsx  page.tsx
web/src/app/(app)/search/: SearchInput.tsx  page.tsx
web/src/app/(marketing)/: layout.tsx  page.tsx
web/src/app/(marketing)/about/: page.tsx
web/src/app/(marketing)/how-it-works/: page.tsx
web/src/app/api/v1/bills/: route.ts
web/src/app/api/v1/chat/: route.ts
web/src/components/: BillChat.tsx  SettingsModal.tsx
web/src/components/layout/: AppSidebar.tsx  MarketingFooter.tsx  MarketingNav.tsx  MobileNav.tsx
web/src/lib/: api.ts  config.ts  db.ts  format.ts  llm.ts  pork-colors.ts  settings.ts  types.ts
(+18 files in other folders)
